fix media overflow on comment.

--- a/src/Adstacy/AppBundle/Resources/public/less/layout/ad.less
+++ b/src/Adstacy/AppBundle/Resources/public/less/layout/ad.less
@@ -234,7 +234,7 @@
     margin-top: 0;
   }
 
-  .media,.media-body {
+  .media {
     overflow: visible;
   }
 
